# dprint-plugin-wgsl

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  wasm_plugin.rs
tests/: dprint.json  shader.wgsl
