[package]
name = "dprint-plugin-wgsl"
version = "0.1.0"
edition = "2021"

[dependencies]
dprint-core = { version = "0.63.3", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0.64"
wgsl_formatter = { git = "https://github.com/wgsl-analyzer/wgsl-analyzer" }

[lib]
crate-type = ["lib", "cdylib"]
