[package]
name = "dprint-plugin-wgsl"
version = "0.1.0"
edition = "2021"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
description = "WGSL formatter for dprint."
homepage = "https://github.com/littledivy/dprint-plugin-wgsl"
keywords = ["formatting", "formatter", "wgsl", "webgpu"]
license = "MIT"
repository = "https://github.com/littledivy/dprint-plugin-wgsl"

[dependencies]
dprint-core = { version = "0.63.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
anyhow = "1.0.64"
wgsl_formatter = { git = "https://github.com/wgsl-analyzer/wgsl-analyzer" }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[lib]
crate-type = ["lib", "cdylib"]
